# para-spacy-lisp

./: CLAUDE.md  LICENSE  Makefile  README.md  TRANSFER_INSTRUCTIONS.md  example-tenses.md  mcp-server.py  pyproject.toml  run_server.sh  setup.org  setup.sh  tenses-schema.json
.github/workflows/: workflow.yml
data/paragraphs/: beowulf_0001.txt  beowulf_0002.txt  beowulf_0003.txt  beowulf_0004.txt  beowulf_0005.txt  beowulf_0006.txt  beowulf_0007.txt  beowulf_0008.txt  beowulf_0010.txt  beowulf_0011.txt  beowulf_0012.txt  beowulf_0013.txt  beowulf_0014.txt  beowulf_0015.txt  beowulf_0016.txt  beowulf_0017.txt  beowulf_0018.txt  beowulf_0019.txt  beowulf_0020.txt  beowulf_0021.txt  beowulf_0022.txt  beowulf_0023.txt  beowulf_0024.txt  beowulf_0025.txt  beowulf_0026.txt  beowulf_0027.txt  beowulf_0028.txt  beowulf_0029.txt  beowulf_0030.txt  beowulf_0031.txt  beowulf_0032.txt  beowulf_0033.txt  beowulf_0034.txt  beowulf_0035.txt  beowulf_0036.txt  beowulf_0037.txt  beowulf_0038.txt  beowulf_0039.txt  beowulf_0040.txt  beowulf_0041.txt  (+985 more)
docs/: CONTRIBUTING.org  LICENSE.org  ONBOARDING.org  README.org  SECURITY.org  SETUP.org
elisp/: spacy-mode.el  tramp-mkdirp.el
examples/: example1.py
processed/json/: beowulf_0001.json  beowulf_0002.json  beowulf_0003.json  beowulf_0004.json  beowulf_0005.json  beowulf_0006.json  beowulf_0007.json  beowulf_0008.json  beowulf_0009.json  beowulf_0010.json  beowulf_0011.json  beowulf_0012.json  beowulf_0013.json  beowulf_0014.json  beowulf_0015.json  beowulf_0016.json  beowulf_0017.json  beowulf_0018.json  beowulf_0019.json  beowulf_0020.json  beowulf_0021.json  beowulf_0022.json  beowulf_0023.json  beowulf_0024.json  beowulf_0025.json  beowulf_0026.json  beowulf_0027.json  beowulf_0028.json  beowulf_0029.json  beowulf_0030.json  beowulf_0031.json  beowulf_0032.json  beowulf_0033.json  beowulf_0034.json  beowulf_0035.json  beowulf_0036.json  beowulf_0037.json  beowulf_0038.json  beowulf_0039.json  beowulf_0040.json  (+992 more)
processed/lisp/: beowulf_0001.el  beowulf_0001.lisp  beowulf_0002.el  beowulf_0002.lisp  beowulf_0003.el  beowulf_0003.lisp  beowulf_0004.el  beowulf_0004.lisp  beowulf_0005.el  beowulf_0005.lisp  (+2054 more)
recipes/: spacy-mode
scripts/: paragraph_parser.py  process_paragraphs.py
server/: nlp_server.py
tests/: __init__.py  test_elisp.el  test_process.py  test_server.py
(+3 files in other folders)
